@@ -1,3 +1,4 @@
+	* add XSetSelectionOwner,XGetSelectionOwner,XConvertSelection (Jordan)
 Version 0.45 - 11 Sep 2003 - greg@censoft.com
 	* added XAllocWMHints, XAllocSizeHints for FLTK 1.1.4
 	* fixed 'p' entry in mwscan_to_mwkey
